@@ -1,3 +1,7 @@
+2008-10-24  Gabor Csardi  <csardi@szaffi>
+
+	* src/structural_properties.c (igraph_shortest_paths_johnson) : added
+
 2008-10-01  Gabor Csardi  <csardi@szaffi>
 
 	* src/blicc.cc (igraph_automorphisms) : fixed a memory leak
